  Contributors
---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt

---------------------------
  Jackdmp changes log
---------------------------

2008-11-27 Stephane Letz  <letz@grame.fr>

	* Report ringbuffer.c fixes from jack1.

2008-11-21 Stephane Letz  <letz@grame.fr>

	* Better isolation of server and clients system resources to allow starting the server in several user account at the same time.

2008-11-19 Stephane Letz  <letz@grame.fr>

	* Libjack shutdown handler does not "deactivate" (fActive = false) the client anymore, so that jack_deactivate correctly does the job later on.
	* Filter SIGPIPE to avoid having client get a SIGPIPE when trying to access a died server. 

2008-11-14 Stephane Letz  <letz@grame.fr>

	* Version 1.9.1 started, fix symbols export in ringbuffer.c, cleanup on Windows.

2008-11-13 Stephane Letz  <letz@grame.fr>

	* Fix jackctl_server_unload_internal.

2008-10-30 Stephane Letz  <letz@grame.fr>
	
	* Fix Midi port initialization in JackNetDriver.
	* Correct JackClient::ShutDown.

2008-10-23 Stephane Letz  <letz@grame.fr>
	
	* Fix a crash in JackEngine::Close when backend cannot be loaded.
	* Tim Blechmann optimization patch.
	* Backport of latest Paul alsa_seqmidi changes.

2008-10-15 Stephane Letz  <letz@grame.fr>
	
	* Fix a conflict with Audio Hijack in JackCoreAudioDriver. 

2008-10-09 Stephane Letz  <letz@grame.fr>
	
	* Use a mutex to make jack_client_open/jack_client_close thread safe, remove use of jack_init/jack_uninit.

2008-10-08 Stephane Letz  <letz@grame.fr>
	
	* Fix a SMP related bug introduced in rev 2957 : remove the __SMP__ flag and define LOCK for SMP in all cases.

2008-10-02 Stephane Letz  <letz@grame.fr>
	
	* Correct file permission for jack-shm-registry POSIX shared memory segment.