@@ -43,7 +43,6 @@ struct JackClientControl : public JackShmMemAble
     int fRefNum;
     int fPID;
     bool fActive;
-    bool fServer;
 
     JackClientControl(const char* name, int pid, int refnum)
     {
@@ -78,7 +77,6 @@ struct JackClientControl : public JackShmMemAble
         fTransportSync = false;
         fTransportTimebase = false;
         fActive = false;
-        fServer = true;
     }
 
 };
